OpenML 1.9 (Release date: 2019-08-06):
===========
  - Fixed bug: Uploaded runs now also contain default hyperparamters.
  - Fixed bug with multiple values for ignore.attribute.
  - The status argument of listOML* functions can now also take the value 'all'.
  - Allow to uploading data sets with multiple targets (e.g. multilabel tasks).
  - New functions: uploadOMLTask, uploadOMLStudy, makeOMLStudy, getOMLStudy, listOMLStudies, extractOMLStudyIds.

OpenML 1.8 (Release date: 2018-03-02):
===========
  - Fixed bug in listOMLSetup.
  - Update to curl 3.1 which fixes the error 'transfer closed with outstanding read data remaining' for large files.
  - New function extractOMLStudyIds added, which directly extracts ids of data sets, tasks, flows and runs.

OpenML 1.7 (Release date: 2017-10-17):
===========
  - listOMLTask, listOMLFlow, listOMLRuns do not return the tag field anymore.
  - New function listOMLSetup added, which enables extracting hyperparameter configurations of specific setups/flows.
  - New function chunkOMLlist added in order to automatically do chunked listing requests.

OpenML 1.6 (Release date: 2017-08-14):
===========
  - Fixes some config issues.

OpenML 1.5 (Release date: 2017-08-11):
===========
  - New functions to list and get all information w.r.t. studies: getOMLStudy, listOMLStudies.
  - API key not needed anymore for getOML* and listOML* functions.

OpenML 1.4 (Release date: 2017-06-20):
===========
  - Bugfix: Error message "Start tag expected, '<' not found" for getOMLTask and getOMLDataSet was fixed.
  - as.data.frame methods for OMLRunParList, OMLDataSet and OMLTasks objects were added.
  - listOMLRunEvaluations now allows to get results w.r.t. a single evaluation measure ('evaluation.measure' arg) which speeds up the request.
  - listOMLRuns and listOMLRunEvaluations now also supports a vector of ids for task.id, flow.id and uploader.id.