@@ -16,18 +16,19 @@ License: BSD_3_clause + file LICENSE
 URL: https://github.com/openml/openml-r
 BugReports: https://github.com/openml/openml-r/issues
 Depends: R (>= 3.0.2)
-Suggests: testthat, mlr (>= 2.15), randomForest, rpart, RWeka, xml2,
-        farff, knitr, rmarkdown, R.rsp, lintr (>= 1.0.1), rex
+Suggests: testthat, mlr (>= 2.15), ParamHelpers (>= 1.10),
+        randomForest, rpart, RWeka, xml2, farff, knitr, rmarkdown,
+        R.rsp, lintr (>= 1.0.1), rex
 Imports: backports (>= 1.1.0), BBmisc (>= 1.11), checkmate (>= 1.8.2),
-        ParamHelpers (>= 1.10), data.table, digest, httr, stringi, XML,
-        jsonlite, memoise (>= 1.0.0), stats, curl (>= 3.1)
+        data.table, digest, httr (>= 1.4.1), stringi, XML, jsonlite,
+        memoise (>= 1.0.0), stats, curl (>= 4.1)
 LazyData: yes
 ByteCompile: yes
-Version: 1.9
+Version: 1.10
 RoxygenNote: 6.1.1
 VignetteBuilder: R.rsp
 Encoding: UTF-8
 NeedsCompilation: no
-Packaged: 2019-08-07 13:15:18 UTC; Admin2
+Packaged: 2019-09-21 12:36:03 UTC; scary
 Repository: CRAN
-Date/Publication: 2019-08-07 13:40:02 UTC
+Date/Publication: 2019-09-21 13:00:02 UTC
