@@ -83,7 +83,6 @@ export(uploadOMLRun)
 export(uploadOMLStudy)
 export(uploadOMLTask)
 import(BBmisc)
-import(ParamHelpers)
 import(XML)
 import(checkmate)
 import(curl)
